QA-236 Avoid quotes & redirection issue in getRuntime().exec (#154)
* QA-236 Avoid quotes & redirection issue in getRuntime().exec

* Fixing test: Value 127 is returned by /bin/sh when the given command is not found

* Update CommonG.java